<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nearbyPharmacyFragment">

    <fragment
        android:id="@+id/nearbyPharmacyFragment"
        android:name="com.example.pharmacytrack.ui.nearby.NearbyPharmacyFragment"
        android:label="@string/bottom_nav_nearby" />

    <fragment
        android:id="@+id/pharmacyListFragment"
        android:name="com.example.pharmacytrack.ui.pharmacy.PharmacyListFragment"
        android:label="@string/bottom_nav_pharmacies" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.pharmacytrack.ui.favorites.FavoritesFragment"
        android:label="@string/bottom_nav_favorites" />

</navigation>